# de_elt_datalake_iceberg

./: .env.example  .gitignore  FutureEnhancements.md  PRD.md  README.md  pyproject.toml  requirements.txt  show_results.py
docs/: PRD.md  future_enhancements.md  time_travel.md
src/: batch_loader.py  climate_data_dag.py  iceberg_setup.py  main.py  stream_processor.py  test_iceberg_tables.py
src/query_engine/athena/: time_travel_example.py
src/query_engine/duckdb/: query_with_duckdb.py  time_travel_example.py
src/utils/: iceberg_utils.py
test/integration_test/: test_batch_loader.py  test_stream_processor.py
test/unit_test/: test_iceberg_setup.py  test_main.py
